Updated GuiService to generate buttons on a separate thread so the application stays responsive even while the buttons are being generated.
Refactored GuiService method fillVboxGrid() into GenerateHBox() which now only generates a singular HBox containing wine buttons for all wines in the given wine list.
The new startButtonGeneration() method uses GenerateHBox() to generate HBoxes one at a time and render them as soon as they are done instead of generating all of them before rendering. It also creates the new thread that generates the buttons.